# ComfyUI-PS-Connector

./: (）11 (1).json  AI2PS-plugin_PS.ccx  LICENSE  PSSendToLayer.py  PSWorkflowConfig.py  README.md  __init__.py  ps_dynamic_ports.js  pyproject.toml  routes.py
example/: (C)(Qwen)Qwen-image.json  (C)(SDXL)A.json  (Flux.2 Klein 9B)flux-2-klein.json  (LLM)Qwen3.json
js/: ps_dynamic_ports.js
