# pyproject.toml
[project]
name = "comfyui-ps-connector"
description = "A connector between a Photoshop plugin and ComfyUI that enables the plugin to access ComfyUI's model list, LoRA trigger words, and preset workflows, and to directly send images and parameters from Photoshop to ComfyUI for image generation."
version = "1.0.2"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/doubley2000/ComfyUI-PS-Connector"

[tool.comfy]
PublisherId = "doubley2000"
DisplayName = "ComfyUI PS Connector"
Icon = ""
